# OCR-Service

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt
env/: basic_settings.yaml
server/api_server/: main_routes.py  server_app.py
server/configs/: basic_config.py  ocr_config.py
server/ocr/: ocr_extract_utils.py  ocr_helper.py  ocr_service.py  single_ocr_engine.py
src/ocr_service/: __init__.py  cli.py  pydantic_settings_file.py  settings.py  startup.py
src/ocr_service/server/api_server/: main_routes.py  server_app.py
src/ocr_service/server/ocr/: ocr_extract_utils.py  ocr_helper.py  ocr_service.py  single_ocr_engine.py
