[project]
name = "ocr-service"
version = "1.0.0"
description = "基于 RapidOCR 的高性能 PDF OCR 识别与文档结构化解析服务"
authors = [
    {name = "fengjiaxin1993",email = "1922623048@qq.com"}
]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.9"
langchain = "1.2.15"
langchain-community = "0.4.1"
langchain-openai = "1.2.1"
langgraph = "1.1.9"
uvicorn = "0.46.0"
sse-starlette = "1.8.2"
PyMuPDF = "1.27.2.3"
json_repair = "0.59.5"
numpy = "2.2.6"
bs4 = "0.0.2"
docxtpl = "0.20.2"
docx2txt = "0.9"
pillow = "12.2.0"
opencv-python = "4.13.0.92"
chardet = "7.4.3"
nltk = "3.9.4"
memoization = "0.4.0"
ruamel-yaml = "0.19.1"
loguru = "0.7.3"
python-multipart = "0.0.26"
faiss-cpu = "1.13.2"
uuid = "1.30"
unstructured = "0.18.32"
click = "^8.0.0"
pydantic = "^2.0.0"
httpx = "^0.27.0"
tenacity = "^8.0.0"
pandas = "^2.0.0"
markdown = "^3.0.0"
rapid-doc = "^0.9.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
requests = ">=2.31.0"


[tool.poetry]
packages = [{include = "ocr_service", from = "src"}]
include = [
    "src/ocr_service/models/**/*"
]

[tool.poetry.scripts]
ocr-service = "ocr_service.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"
